Fixed spacing issue with "Check it out" button on project page

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -7,6 +7,9 @@ ul.projects {
   }
 
   .tags {
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-right: 10px;
     color: #777;
     font-size: 0.8em;
   }
